<resources>
    <string name="app_name">cukorbeteg</string>
    <string name="String_vercukorszint">Vércukorszint</string>
    <string name="PleaseEnterUsername">Kérem töltse ki a felhasználónév mezőt</string>
    <string name="PleaseEnterPassword">Kérem töltse ki a jelszó mezőt</string>
    <string name="NemFerfi">Férfi</string>
    <string name="NemNo">Nő</string>
    <string name="tvNem">Nem</string>
    <string name="tvKor">Születési dátum</string>
    <string name="tvWeight">Súly</string>
    <string name="kesz">Kész</string>
    <string name="tvHeight">Magasság</string>
    <string name="commited">Commited!</string>
    <string name="invalidUserOrPass">Invalid username or password</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="id">id</string>
    <string name="user">user</string>
    <string name="error">error</string>
    <string name="message">message</string>
    <string name="valamiHibaTortent">Valami hiba történt</string>
    <string name="szelsoertekek">Szélső Értékek: </string>
    <string name="cim">BMI Kalkulátor</string>
    <string name="testtomeg_hint">Testtömeg (kg)</string>
    <string name="testmagassag_hint">Testmagasság (cm)</string>
    <string name="eredmeny" />
    <string name="szamol">számol</string>
    <string name="sovany">Sovány</string>
    <string name="normal">Normál testsúly</string>
    <string name="tulsuly">Túlsúly</string>
    <string name="elhizas">Elhízás</string>
    <string name="ferfi">Férfi</string>
    <string name="no">Nő</string>
    <string name="tv_kivanatos" />
    <string name="tv_szelsoertekek" />
    <string name="kivanatos">Kivánatos átlag: </string>
    <string name="mertekegyseg_kg"> kg</string>
    <string name="kivanatosatlag">Kivánatos átlag:</string>
    <string name="szelsoertek">Szélső értékek:</string>
    <string name="letoltes">letöltés</string>
    <string name="recept_levesek">levesek</string>
    <string name="t_szt_k_s_tem_nyek">Tészták, sütemények</string>
    <string name="kis_tkez_sek">Kisétkezések</string>
    <string name="m_rt_sok">Mártások</string>
    <string name="h_sok_h_sp_tl_k">Húsok, húspótlók</string>
    <string name="f_zel_kek">Főzelékek</string>
    <string name="sal_t_k">Saláták</string>
    <string name="k_retek">Köretek</string>
    <string name="egyt_l_telek">Egytálételek</string>
    <string name="ujertek">Új érték hozzá adása</string>
    <string name="ev_s_el_tt">Evés előtt</string>
    <string name="evesutan">Evés után</string>
    <string name="ertek">Érték (mmol/l)</string>
    <string name="kal_ria">Kalória</string>
    <string name="szenhidrat">Szénhidrát</string>
    <string name="tkez_s">Étkezés</string>
    <string name="j_v_rcukor_rt_k">Új vércukor érték</string>
    <string name="adatok">adatok</string>
    <string name="receptek">receptek</string>
    <string name="v_rcukor">vércukor</string>
    <string name="f_oldal">Főoldal</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="profile">Profile</string>
</resources>