<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/et_szul"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_phisicalDatas">

    <TextView
        android:id="@+id/textViewNem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:text="@string/tvNem"
        android:textSize="30dp" />

    <RadioGroup
        android:id="@+id/rg_nem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_ferfi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/NemFerfi" />

        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/NemNo" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewKor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tvKor"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/etKor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tvWeight"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/et_suly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tvHeight"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/et_magassag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:id="@+id/buttonKesz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kesz" />

    <TextView
        android:id="@+id/tv_bmi_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_bmi_result_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/kivanatosatlag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_kivanatos_atl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/szelsoertek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_szelsoertek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp" />

</LinearLayout>