<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/et_szul"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_post_vercukor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:text="@string/tkez_s"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/rg_etkezesek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/evesElott"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/ev_s_el_tt" />

        <RadioButton
            android:id="@+id/evesUtan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/evesutan" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/ertek"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etErtek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="number"
        android:paddingStart="10dp"
        android:autofillHints=""
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/kal_ria"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_kaloria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/szenhidrat"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_szenhidrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonKesz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kesz" />

    <TextView
        android:id="@+id/tv_bmi_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_bmi_result_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/kivanatosatlag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_kivanatos_atl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/szelsoertek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_szelsoertek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp" />

</LinearLayout>